--- a/AngularSetUp/FirstAngular/src/app/component/header/header.html
+++ b/AngularSetUp/FirstAngular/src/app/component/header/header.html
@@ -1,4 +1,6 @@
-<header class="container-header">
+<div class="container">
+
+    <header class="container-header">
 
     <a href="" class="brand">Logo</a>
 
@@ -9,3 +11,5 @@
         <li class="link"><a href="">About</a></li>
     </ul>
 </header>
+
+</div>
