--- a/AngularSetUp/FirstAngular/src/app/component/main/main.html
+++ b/AngularSetUp/FirstAngular/src/app/component/main/main.html
@@ -4,7 +4,7 @@
 
     <p>{{name}}</p>
 
-    <button (click)="toggle()">Click</button>
+    <button (click)="toggle()" class="btn btn-primary">Click</button>
     <div class="content-toggle" [class.open] = "isActive">
 
         <p class="Pcontainer" [class.visi] = "isActive">Hello pohh</p>
