--- a/AngularSetUp/FirstAngular/src/app/component/header/header.html
+++ b/AngularSetUp/FirstAngular/src/app/component/header/header.html
@@ -1,14 +1,14 @@
-<div class="container">
+<div class="container-fluid bg-black">
 
-    <header class="container-header">
+    <header class="container d-flex justify-content-between align-items-center">
 
-    <a href="" class="brand">Logo</a>
+    <a href="" class="navbar-brand text-white">Logo</a>
 
-    <ul class="navlink">
-        <li class="link"><a href="">Home</a></li>
-        <li class="link"><a href="">Project</a></li>
-        <li class="link"><a href="">Skill</a></li>
-        <li class="link"><a href="">About</a></li>
+    <ul class=" navbar list-unstyled mb-0 text-white">
+        <li class="nav-item px-3"><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item px-3"><a href="" class="nav-link">Project</a></li>
+        <li class="nav-item px-3"><a href="" class="nav-link">Skill</a></li>
+        <li class="nav-item px-3"><a href=""class="nav-link">About</a></li>
     </ul>
 </header>
 
