--- a/AngularBootstrap/src/app/components/project/project.html
+++ b/AngularBootstrap/src/app/components/project/project.html
@@ -2,6 +2,36 @@
 
     
     <h1 class="text-black">Project</h1>
-</div>
 
+
+    <div class="container">
+
+        <div class="card w-25 p-3 shadow">
+
+
+            <h5>Select your location</h5>
+
+            <div class="container">
+                
+            <label for="">Email</label>
+            <select name="" id="" class="form-select">
+
+            @for (item of countryList; track $index) {
+  
+                <option value="">{{item.emailId}}</option>
+            }
+                
+            </select> 
+                   
+        
+          
+       
+
+            </div>
+    </div>
+
+    
+  
+</div>
+</div>
     
