--- a/AngularApi/src/app/components/post/post.html
+++ b/AngularApi/src/app/components/post/post.html
@@ -1,5 +1,5 @@
 
-<div class="container p-3">
+<div class="container p-3 min-vh-100 " >
 
     <div class="row">
 
@@ -43,8 +43,21 @@
 
                      <div class="col d-flex align-items-center">
                       
-                            <button class="btn btn-success" (click)="postUser()">Submit</button>
-                                    
+                            
+                               <button class="btn btn-dark" (click)="resetField()">Reset</button>
+                            @if(regiteredUser.userId===0){
+
+                                <button class="btn btn-success" (click)="postUser()">Submit</button>
+                              
+                            }
+                            @else {
+
+                                 <button class="btn btn-warning" (click)="updateUser()">Update</button>
+                               
+
+                            }
+
+                             <p>{{regiteredUser.userId}}</p>
                     </div>
                 
                 </div>
@@ -81,7 +94,11 @@
                                  <td>{{item.fullName}}</td>
                                  <td>{{item.emailId}}</td>
                                   <td>{{item.password}}</td>
-                                  <td>{{item.mobileNo}}</td>
+                                  <td>{{item.mobileNo}}
+
+                                    <button class="btn btn-danger btn-sm" (click)="deleteUser(item.userId)">Delete</button>
+                                    <button class="btn btn-info btn-sm" (click)="editUser(item)">Edit</button>
+                                  </td>
                                   
                             </tr>
                         }
