--- a/busbooking/src/app/app.html
+++ b/busbooking/src/app/app.html
@@ -2,7 +2,7 @@
 
   <div class="container navbar  ">
 
-    <a href="" class="navbar-brand text-white">Busbooking</a>
+    <a routerLink="/" class="navbar-brand text-white">Busbooking</a>
 
     <nav class="navbar ">
 
@@ -10,11 +10,15 @@
 
         <li class="nav-item"><a href="" class="nav-link text-white" routerLink="home">Home</a></li>
          <li class="nav-item"><a href="" class="nav-link text-white "  routerLink="admin">Admin</a></li>
-          <li class="nav-item"><a href="" class="nav-link text-white"  routerLink="about" >About</a></li>
+          <li class="nav-item"><a href="" class="nav-link text-white"  routerLink="user" >User</a></li>
            <li class="nav-item"><a href="" class="nav-link text-white"  routerLink="login">Log In</a></li>
       </ul>
     </nav>
   </div>
 </div>
+
+
+
+
 
 <router-outlet></router-outlet>
