--- a/busbooking/src/app/components/admin/admin.html
+++ b/busbooking/src/app/components/admin/admin.html
@@ -1,1 +1,165 @@
-<p>admin works!</p>
+
+<div class="container mt-3">
+
+
+  <div class="row">
+
+    <div class="col-4">
+
+      <div class="card">
+
+        <div class="card-header bg-info" >
+          <h4 class="text-center fw-bold text-white ">Register User</h4>
+        </div>
+
+        <div class="card-body">
+
+          <form [formGroup]="registeredUser">
+
+             <div class="row">
+            <div class="col">
+
+              <label for="" class="form-label">Email</label>
+              <input type="text" class="input-group form-control" placeholder="example@.gmail" required formControlName="emailId" >
+            </div>
+         
+          </div>
+
+          <div class="row">
+                      <div class="col">
+
+              <label for="" class="form-label">Fullname</label>
+              <input type="text" class="input-group form-control" placeholder="john alvert" required  formControlName="fullName">
+            </div>
+          </div>
+          
+          <div class="row">
+                      <div class="col">
+
+              <label for="" class="form-label">mobile no.</label>
+              <input type="text" class="input-group form-control" placeholder="+63 999 999 8278" required  formControlName="mobileNo">
+            </div>
+          </div>
+          <div class="row">
+                      <div class="col">
+
+              <label for="" class="form-label">Password</label>
+              <input type="text" class="input-group form-control" required  formControlName="password">
+            </div>
+          </div>
+
+              <div class="row">
+                      <div class="col">
+
+               <button class="btn-primary btn w-100 mt-2" (click)="registerUser()">Register</button>
+
+               @if (emial!) {
+
+                  <button class="btn-warning btn w-100 mt-2" (click)="update()">update</button>
+              <button class="btn-dark btn w-100 mt-2" (click)="reset()">Reset</button>
+                  
+                 
+               }
+               @else {
+
+               
+                 
+               
+               }
+
+            
+              
+             
+              
+               
+            </div>
+          </div>
+
+            
+          </form>
+         
+        </div>
+      </div>
+    </div>
+
+       <div class="col-7  ">
+
+      <div class="card h-100">
+
+        <div class="card-header">
+          <h4>Registered User</h4>
+        </div>
+
+        <div class="card-body f-h-150 overflow-y-scroll ">
+
+          <div class="container d-flex ">
+
+          
+          </div>
+          <div class="d-flex flex-column gap-2 " >
+
+
+               @for (item of UserData; track $index) {
+
+
+                
+                <div class="row">
+            <div class="col">
+ 
+           
+              <div class="container-fluid d-flex flex-row gap-4 bg-info align-items-center py-2 card text-white">
+               
+                <div class="row">
+                  <div class="col ">
+
+                   <span class="fw-bold text-black-50">Email</span>
+                     <p class="mb-0">{{item.emailId}}</p>
+                  </div>
+                </div>
+                   <div class="row">
+                  <div class="col">
+
+                     <span  class="fw-bold text-black-50">Fullname</span>
+                   <p  class="mb-0">{{item.fullName}}</p>
+                  </div>
+                </div>
+                   <div class="row">
+                  <div class="col">
+
+                     <span  class="fw-bold text-black-50">Mobile no.</span>
+                 <p  class="mb-0">{{item.mobileNo}}</p>
+                  </div>
+                </div>
+                   <div class="row">
+                  <div class="col">
+
+                     <span  class="fw-bold text-black-50">Password</span>
+                    <p  class="mb-0">{{item.password}}</p>
+                  </div>
+                </div>
+                
+                       <div class="row ">
+                  <div class="col d-flex gap-2 justify-content-end">
+
+                   <button class="btn btn-success btn-sm" (click)="edit(item)">Edit</button>
+                      <button class="btn btn-danger btn-sm" (click)="delete(item)">Delete</button>
+                  </div>
+                </div>
+              </div>
+               
+            </div>
+          </div>
+
+
+               }
+        
+
+          </div>
+          
+          
+       
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
