--- a/busbooking/src/app/components/home/home.html
+++ b/busbooking/src/app/components/home/home.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<div class="container p-5">
+
+
+
+    <div class="row">
+
+        <div class="col">
+            <h1>Busbooking</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Velit, sequi iusto neque expedita eum excepturi delectus optio
+                  magni esse architecto consectetur eaque impedit. Officiis saepe
+                   repellat repudiandae neque voluptatibus aperiam.</p>
+            <button class="btn btn-warning text-white">Book Now</button>
+        </div>
+
+        <div class="col">
+
+            <img src="/src/app/media/school-bus-tracking-system-abstract-concept-illustration.png" alt="" class="w-100 h-100">
+        </div>
+    </div>
+</div>
