--- a/LoginFormApi/src/app/components/layout/layout.html
+++ b/LoginFormApi/src/app/components/layout/layout.html
@@ -1,42 +1,32 @@
-
-      
-<div class="row sidebar ">
-
-      <div class="col-2 bg-success">
-            
-
-
-
-      <div class="container-fluid h-auto">
-
-                <a href="" class="navbar-brand text-white fw-bolder fs-2">CodeReady</a>
-
-      <nav class="navbar">
-            <ul class="nav flex-column gap-3 ">
-                  <li class="page-item"><a href="" class="nav-link link-light" routerLink="register">Register</a></li>
-                    <li class="page-item"><a href="" class="nav-link link-light" routerLink="dashboard">Dashboard</a></li>
-                      <li class="page-item"><a href="" class="nav-link link-light" routerLink="customer">Customer</a></li>
-                        <li class="page-item"><a href="" class="nav-link link-light" >Logout</a></li>
-
-            </ul>
-      </nav>
-
-
-      </div>
-  
-
-      </div>
-
-     <div class="col p-0">
-
-                  
-            <router-outlet></router-outlet>
-               </div>
-
-
-    
+<div class="container-fluid bg-primary text-white p-3">
+<h1>API</h1>
 </div>
 
+
+<div class="container-fluid px-0">
+  <div class="row g-0">
+    <div class="col-2 bg-dark text-white">
+     
+      <nav class="navbar">
+
+            <ul class="nav flex-column">
+
+                  <li class="nav-item"><a href="" class="nav-link link-light" routerLink="dashboard">Dashboard</a></li>
+                     <li class="nav-item"><a href="" class="nav-link link-light" routerLink="register">Register</a></li>
+                        <li class="nav-item"><a href="" class="nav-link link-light" routerLink="alluser">All user</a></li>
+                           <li class="nav-item"><a href="" class="nav-link link-light" routerLink="updateuser">Update user</a></li>
+            </ul>
+      </nav>
+    </div>
+    <div class="col-10 bg-light">
+     
+    
+
+            <router-outlet></router-outlet>
+
+    </div>
+  </div>
+</div>
 
 
 
