--- a/LoginFormApi/src/app/components/alluser/alluser.html
+++ b/LoginFormApi/src/app/components/alluser/alluser.html
@@ -42,7 +42,7 @@
                     <div class="col d-flex align-items-center">
 
                        <div class="btn-group">
-                         <button class="btn btn-primary">Edit</button>
+                         <button class="btn btn-primary" (click)="navEdit()">Edit</button>
                             <button class="btn btn-danger"  (click)="delete(item.userId)">Delete</button>
                        </div>
                        
